--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,3 +31,9 @@ body.dark-mode .archive {
 // Personaliza aquí según tus necesidades.
 
 
+img.portada-discreta {
+  max-width: 250px;
+  border-radius: 8px;
+  margin: 1em auto;
+  display: block;
+}
