--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -35,6 +35,7 @@ body.dark-mode .archive {
   margin-bottom: 1em;
 }
 .page-image img.entry-feature-image {
+  pading-top: 10px;
   width: 60% !important;          // Abarca el 50% del ancho del contenedor
   max-width: 400px;               // (opcional) limitar tamaño máximo
   aspect-ratio: 1 / 1;            // Mantiene siempre cuadrada la imagen
