--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -33,10 +33,11 @@ body.dark-mode .archive {
 .page-image {
   text-align: center;
   margin-bottom: 1em;
+  margin-top: 2em;                // Espacio extra arriba para separar del menú
 }
+
 .page-image img.entry-feature-image {
-  pading-top: 100px;
-  width: 60% !important;          // Abarca el 50% del ancho del contenedor
+  width: 80% !important;          // Abarca el 50% del ancho del contenedor
   max-width: 400px;               // (opcional) limitar tamaño máximo
   aspect-ratio: 1 / 1;            // Mantiene siempre cuadrada la imagen
   object-fit: cover;              // Recorta si la imagen es muy alargada o alta
