--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,7 @@ layout: default
 
       <div class="page-sidebar">
         {% include page-author.html %}
+        {% include read-time.html %}
         {% include page-categories.html %}
         {% include page-tags.html %}
       </div>
