--- a/_includes/entry.html
+++ b/_includes/entry.html
@@ -13,8 +13,7 @@
         <a href="{{ entry.url | relative_url }}" rel="bookmark">{{ title }}</a>
       {% endif %}
     </h3>
-    {% if entry.image %}
-    {% include entry-featured-image.html %}
+    {% if entry.image.thumbnail %}
       {% assign entry_image = entry.image.thumbnail %}
       {% unless entry_image contains '://' %}
         {% assign entry_image = entry_image | relative_url %}
