--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,8 @@
 ---
 layout: page
+title: "El diario de Kajii Narumi"
+description: "Para los que amamos la palabra escrita"
+image: "/Blog/images/logo.png"
 ---
 
 {{ content }}
