--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: page
 title: "El diario de Kajii Narumi"
 description: "Para los que amamos la palabra escrita"
-image: "/Blog/images/logo.png"
+image: "/images/logo.png"
 ---
 
 {{ content }}
