--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "El diario de Kajii Narumi"
-description: "Para los que amamos la palabra escrita"
+excerpt: "Para los que amamos la palabra escrita"
 image: "/images/logo.png"
 ---
 
