--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,5 @@
 ---
-layout: home
+layout: page
 title: "El diario de Kajii Narumi"
 excerpt: "Para los que amamos la palabra escrita"
 image: "/images/logo.png"
