--- a/_includes/head-seo.html
+++ b/_includes/head-seo.html
@@ -1,1 +1,14 @@
-{% seo %}
+<!-- Open Graph / Facebook / WhatsApp / Telegram -->
+<meta property="og:title" content="{{ page.title | default: site.title }}">
+<meta property="og:description" content="{{ page.description | default: site.description }}">
+<meta property="og:type" content="article">
+<meta property="og:url" content="{{ page.url | absolute_url }}">
+<meta property="og:image" content="{{ page.image | default: site.image | absolute_url }}">
+
+<!-- Twitter Card data -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="{{ page.title | default: site.title }}">
+<meta name="twitter:description" content="{{ page.description | default: site.description }}">
+<meta name="twitter:image" content="{{ page.image | default: site.image | absolute_url }}">
+
+<!-- {% seo %}  -->
