--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,5 +1,5 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
-<link rel="icon" type="image/png" href="/favicon.ico">
+<link rel="icon" type="image/png" href="/blog/favicon.ico">
 <!-- end custom head snippets -->
