--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,7 @@ layout: default
       <div class="page-content">
         <div class="e-content">
           {{ content }}
+          {% include post-footer.html %}
         </div>
 
         {% if page.share %}
