--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,8 +15,9 @@ layout: default
         {% if page.link %}
           <h1 id="page-title" class="page-title"><a href="{{ page.link }}">{{ title }} <span class="link-arrow">&rarr;</span></a></h1>
         {% else %}
-          <h1 id="page-title" class="page-title">{{ title }}</h1>
-        {% endif %}
+{% if page.heading %}
+  <h1>{{ page.heading }}</h1>
+{% endif %}        {% endif %}
       </header>
       <div class="page-content">
         {{ content }}
