--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,6 +28,13 @@ body.dark-mode .archive {
   background: #222 !important;
   color: #f6f6f6 !important;
 }
+
+/* Citas */
+body.dark-mode blockquote {
+  background: #21272b;
+  border-left: 4px solid #51a7ff;
+  color: #ddd;
+}
 // Personaliza aquí según tus necesidades.
 
 .page-image {
