--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,7 +31,7 @@ body.dark-mode .archive {
 
 /* Citas */
 body.dark-mode blockquote {
-  background: #21272b;
+  background: #000;
   border-left: 4px solid #51a7ff;
   color: #ddd;
 }
