--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -47,7 +47,7 @@ layout: page
 {% assign category_counts = category_counts | split: "|" %}
 
 
-<ul class="taxonomy-index">
+<ul id="page-title" class="taxonomy-index">
   {% for category_names in category_names_array %}
     {% assign category_names_list = category_names | split: "," %}
     {% assign category_count = category_counts[forloop.index0] %}
