--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -25,6 +25,7 @@ body.dark-mode .post,
 body.dark-mode .page,
 body.dark-mode .entry,
 body.dark-mode .archive {
+  background: #222 !important;  
   color: #f6f6f6 !important;
 }
 
