--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,18 @@ layout: default
       </header>
 
       <div class="page-sidebar">
-        {% include page-author.html %}
+        
+{% assign author_name = page.author.name %}
+{% assign author = site.data.authors | where: "name", author_name | first %}
+{% if author %}
+  <span class="post-author">
+    <a href="{{ author.url }}" target="_blank" rel="author noopener">{{ author.name }}</a>
+  </span>
+{% else %}
+  <span class="post-author">{{ author_name }}</span>
+{% endif %}
+        
+
         {% include read-time.html %}
         {% include page-categories.html %}
         {% include page-tags.html %}
