--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ layout: default
   <span class="post-author">{{ author_name }}</span>
 {% endif %}
         
-
+        {% include page-date.html %}
         {% include read-time.html %}
         {% include page-categories.html %}
         {% include page-tags.html %}
