--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -54,4 +54,11 @@ body.dark-mode blockquote {
   box-shadow: none !important;
 }
 
+.post-author {
+  display: block;
+  padding-bottom: 0.5em;
+  border-bottom: 1px solid #e0e0e0;
+  margin-bottom: 0.5em;
+}
+
 
