--- a/_includes/page-date.html
+++ b/_includes/page-date.html
@@ -1,4 +1,5 @@
 <time class="page-date dt-published" datetime="{{ page.date | date_to_xmlschema }}">
   {%- assign date_format = site.date_format | default: "%B %-d, %Y" -%}
   {{ page.date | date: date_format }}
+  {%- endif -%}
 </time>
